last change until 2000-12-05 Christian Ruppert <arc@gmx.li>

	* massive changes to window management kernel, too complex and much to
	  make sense being documented here... i'll continue this ChangeLog from
	  now on i promise.

2000-06-26  Christian Ruppert <arc@gmx.li>

	* config/urdb: added some resource definitions (taken from the gnome
	  resource manager, thx to the guys who set this up!)
	* doc/manual.tex: small changes

2000-06-26  Christian Ruppert <arc@gmx.li>

	* uwm/winmenu.c: renamed global selected to selectedHex
	* uwm/menu.c: renamed global selected to selectedMenuItem
	* configure.in: changed version
	* README: changed for snapshot
	*** FINISHED AND RELEASED SNAPSHOT ***

2000-06-23  Christian Ruppert <arc@gmx.li>

	* uwm/move.c(MoveButtons): changed routine to move window to
	  coordinates returned by StopRubber.

2000-06-01  Christian Ruppert <arc@gmx.li>

	* uwm/properties.c (Updatera): changed final default values for window
	  base size from actual size to be 1x1

2000-05-28  Christian Ruppert <arc@gmx.li>

	* uwm/uwm.c (CatchWindows): added reading WM_STATE_PROPERTY to overtake
	  a window's state from an eventually previous runnung wm.
	* uwm/handlers.c (HandleMap): changed properties data type from ulong
	  to CARD32 which should be safer for machines with different word
	  lengths
	* uwm/windows.c (IconifyWin/DeiconifyWin): removed changing WMHints
	  which is forbidden by icccm 2.0.
	* uwm/windows.c (SetWinMapState): corrected icon window element to 
	  be None.
	* uwm/windows.c (EnborderWin): now using UltimateContext.gravity.
	* uwm/properties.c (Updatera): screen area check to EnborderWin
	  for optimisation reasons.
	* uwm/windows.c (EnborderWin): moved in screen area check from Updatera
	  for optimisation reasons.
	* uwm/properties.c (Updatera): added init for UltimateContext.gravity.
	* uwm/uwm.h: added UltimateContext.gravity.
	* uwm/properties.c (Updatera): corrected replacement of invalid min